--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   provider: ^6.0.0 # Для управления состоянием приложения
   json_serializable: ^6.0.1 # Для удобной работы с JSON (если хотите автогенерацию моделей)
   supabase_flutter: ^2.8.1
+  font_awesome_flutter: ^10.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
